kubernetes/main/apps/storage/longhorn/app/ingress.yaml
---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: longhorn
#   namespace: storage
#   annotations:
#     gethomepage.dev/enabled: "true"
#     gethomepage.dev/icon: longhorn.png
#     gethomepage.dev/name: Longhorn
#     gethomepage.dev/group: Infrastructure
#     # nginx.ingress.kubernetes.io/auth-response-headers: Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
#     # nginx.ingress.kubernetes.io/auth-signin: https://longhorn.${SECRET_DOMAIN}/outpost.goauthentik.io/start?rd=$scheme://$http_host$request_uri
#     # nginx.ingress.kubernetes.io/auth-snippet: proxy_set_header X-Forwarded-Host $http_host;
#     # nginx.ingress.kubernetes.io/auth-url: http://ak-outpost-proxy-outpost.security.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
#     hajimari.io/icon: mdi:harddisk
#     hajimari.io/group: infrastructure
# spec:
#   ingressClassName: nginx
#   rules:
#     - host: &host "longhorn.${SECRET_DOMAIN}"
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: longhorn-frontend
#                 port:
#                   number: 80
#   tls:
#     - hosts:
#         - *host

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # prevent the controller from redirecting (308) to HTTPS
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required '
    # custom max body size for file uploading like backing image uploading
    nginx.ingress.kubernetes.io/proxy-body-size: 10000m
spec:
  ingressClassName: nginx
  rules:
    - host: &host "longhorn.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
  tls:
    - hosts:
        - *host
